# printsight

./: .gitignore  README.md  pyproject.toml
printsight/: __init__.py  analyzer.py  annotator.py  cli.py  detectors.py
tests/: generate_test_data.py  test_detectors.py
